# vcfdash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: smoke_test.py
modules/nextflow/: vcfdash.nf
test_data/bed_file/: hg38_Twist.antitargets.bed  hg38_Twist.targets.bed.gz.tbi
tests/: conftest.py  test_coverage.py  test_report.py  test_variants.py
vcfdash/: __init__.py  __main__.py  cli.py  coverage.py  report.py  utils.py  variants.py
vcfdash/templates/: report.html.j2
vcfdash/templates/assets/: style.css  viz.js
