[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcfdash"
version = "0.1.0"
description = "Lightweight, pipeline-native clinical variant and coverage dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "vcfdash contributors" },
]
keywords = [
    "bioinformatics",
    "genomics",
    "visualization",
    "variant-calling",
    "clinical",
    "nextflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "cyvcf2>=0.30",
    "jinja2>=3.1",
    "pysam>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
vcfdash = "vcfdash.cli:main"

[project.urls]
Homepage    = "https://github.com/vcfdash/vcfdash"
Repository  = "https://github.com/vcfdash/vcfdash"
Issues      = "https://github.com/vcfdash/vcfdash/issues"
Documentation = "https://github.com/vcfdash/vcfdash/blob/main/docs/usage.md"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["vcfdash"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["vcfdash"]
omit   = ["tests/*", "vcfdash/templates/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
